kubernetes/application-deployment/loadbelance/bdmarket/bdmarket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdmarket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bdmarket
  template:
    metadata:
      labels:
        app: bdmarket
    spec:
      containers:
      - name: bdmarket
        image: larrylinus/securedsoft:BDMarket-55
        ports:
        - containerPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdmarket2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bdmarket2
  template:
    metadata:
      labels:
        app: bdmarket2
    spec:
      containers:
      - name: bdmarket2
        image: larrylinus/securedsoft:BDMarket-55
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name:  bdmarket-svc-1
  namespace: applications
spec:
  selector:
    app:  bdmarket
  
  type:  ClusterIP
  ports:
  - name:  http
    port:  3000 

---


apiVersion: v1
kind: Service
metadata:
  name:  bdmarket-svc-2
  namespace: applications
spec:
  selector:
    app:  bdmarket2
  
  type:  ClusterIP
  ports:
  - name:  http
    port:  3000 

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bdmarket-loadbelance
  namespace: applications

spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`bdmarket.securedsoft.online`)
    kind: Rule
    services:
    - name: bdmarket-svc-1
      port: 3000
      nativeLB: true
    - name: bdmarket-svc-2
      port: 3000
      nativeLB: true
  
  tls:                              
    certResolver: acme-dns          
    domains:                    
    - main: bdmarket.securedsoft.online
